cmake_minimum_required(VERSION 3.17)
project(test)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_subdirectory(lib/googletest)
include_directories(lib/googletest/googletest/include)
set(SOURCE_FILES string_test.cpp vector_test.cpp)
add_executable(test ${SOURCE_FILES})
target_link_libraries(test gtest gtest_main)
